# ETechnikProjekt

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
Calibrator/: Settings.h  out_camera_data.xml
Client/: CMakeLists.txt  ModelCreator.cpp  ModelCreator.h  UdpClient.pro  UdpClient.pro.user.163a401  UdpClient.pro.user.426bfe6  errordialog.cpp  errordialog.h  image.qrc  imageupdater.cpp  imageupdater.h  infoeagleeyedialog.cpp  infoeagleeyedialog.h  infoeagleeyedialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  posdata.cpp  posdata.h  positioningreceiver.cpp  positioningreceiver.h  showimagedialog.cpp  showimagedialog.h  showimagedialog.ui
Client/ZumTesten/: TestUdpProducer  TestUdpProducer.cpp  TestUdpProducer.d
Client/controller/: imageupdater.cpp  imageupdater.h
Client/gui/: errordialog.ui  infoeagleeyedialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  showimagedialog.cpp  showimagedialog.h  showimagedialog.ui
Client/guifunctionclasses/: ModelCreator.cpp  ModelCreator.h  converter.cpp  converter.h  line.cpp  line.h  player.h
Client/model/: ModelCreator.cpp  ModelCreator.h  converter.cpp  converter.h  line.cpp  line.h
FieldLocator/: FieldLocator.h
IndoorSatellit/src/: main.cpp
IndoorSatellit/src/Filters/: ImageFilter.h  TailorFieldView.cpp  TailorFieldView.h  Undistorter.cpp  Undistorter.h
Positioning_Service/src/: Transmitter.cpp  Transmitter.h  main.cpp
Positioning_Service/src/Calibrator/: Calibrator.cpp  Calibrator.h  CameraCalibration.cpp  Settings.cpp  Settings.h  in_VID5.xml
Positioning_Service/src/FieldLocator/: FieldLocator.cpp  FieldLocator.h
Positioning_Service/src/Filters/: CropFieldView.cpp  CropFieldView.h  ImageFilter.h  TailorFieldView.cpp  TailorFieldView.h  Undistorter.cpp  Undistorter.h
Positioning_Service/src/PositionService/: IPositionService.h  LocatableObject.h  LocateableObj.cpp  LocateableObj.h  LocatedObject.cpp  LocatedObject.h  MetricPositionTransformator.cpp  MetricPositionTransformator.h  ObjectLocator.cpp  ObjectLocator.h
Positioning_Service/src/Transmitter/: ConnectionException.h  PosData.cpp  PosData.h  PositioningDataException.h  Transmitter.cpp  Transmitter.h  TransmittingException.h
Server/: CMakeLists.txt  ServerGui.pro.user.163a401  Settings.h  main.cpp
Server/configFiles/: in_VID5.xml
Server/gui/: cameracalibrationdialog.h  errordialog.cpp  image.qrc  login.cpp  login.h  login.ui
Server/gui/guiFunctionClasses/: playercalib.cpp
Server/model/Calibrator/: Calibrator.h
Server/model/Filters/: CropFieldView.h  ImageFilter.h
Server/model/PositionService/: LocatableObject.cpp  LocatedObject.cpp  ObjectLocator.cpp
Server/model/Transmitter/: PosData.h  Transmitter.cpp  Transmitter.h
Service/: README.md
Service/src/: CMakeLists.txt  Condition.cpp  Condition.h  Mutex.cpp  Mutex.h  Networkadapter.cpp  Networkadapter.h  Networkinterface.cpp  Networkinterface.h  PosData.cpp  PosData.h  PositioningDataException.h  Service.cpp  Service.h  TCPConnector.h  TCPReceiver.cpp  TCPReceiver.h  TCPServer.cpp  TCPServer.h  TCPStream.cpp  TCPStream.h  Thread.cpp  Thread.h  ThreadSafeQueue.h  UDPSender.cpp  UDPSender.h  config.h  main.cpp
Transmission_Service/: CMakeLists.txt  README.md
Transmission_Service/src/: CMakeLists.txt  Condition.cpp  Condition.h  Mutex.cpp  Mutex.h  Networkinterface.cpp  Networkinterface.h  PosData.cpp  PosData.h  Service.cpp  Service.h  TCPConnector.cpp  TCPConnector.h  TCPReceiver.cpp  TCPReceiver.h  TCPServer.cpp  TCPServer.h  TCPStream.h  Thread.cpp  Thread.h  ThreadSafeQueue.h  UDPSender.cpp  UDPSender.h  config.h  main.cpp
WLAN/: README.md  dnsmasq.conf  hostapd.conf  start.sh
qtProjekt/ServerGui/: CMakeLists.txt  ServerGui.pro  ServerGui.pro.user.426bfe6  Settings.cpp  Settings.h  config.h  main.cpp
qtProjekt/ServerGui/configFiles/: EagleEyeParams.xml  out_camera_data.xml
qtProjekt/ServerGui/gui/: cameracalibrationdialog.cpp  cameracalibrationdialog.h  cameracalibrationdialog.ui  errordialog.cpp  errordialog.h  errordialog.ui  image.qrc  infoeagleeyedialog.cpp  infoeagleeyedialog.h  infoeagleeyedialog.ui  login.cpp  login.h  login.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui
qtProjekt/ServerGui/gui/guiFunctionClasses/: converter.cpp  drawimage.cpp  drawimage.h  player.cpp  player.h  playercalib.cpp  playercalib.h  playerstream.cpp  playerstream.h  playertracking.cpp  playertracking.h
qtProjekt/ServerGui/model/Calibrator/: Calibrator.cpp  Calibrator.h  Settings.cpp
qtProjekt/ServerGui/model/Exception/: exception.cpp  exception.h
qtProjekt/ServerGui/model/FieldLocator/: FieldLocator.cpp  FieldLocator.h
qtProjekt/ServerGui/model/Filters/: CropFieldView.cpp  CropFieldView.h  Undistorter.cpp  Undistorter.h
qtProjekt/ServerGui/model/PositionService/: IPositionService.h  LocatableObject.cpp  LocatableObject.h  LocatedObject.cpp  LocatedObject.h  MetricPositionTransformator.cpp  MetricPositionTransformator.h  ObjectLocator.cpp  ObjectLocator.h
qtProjekt/ServerGui/model/Transmitter/: ConnectionException.h  PosData.cpp  PosData.h  Transmitter.cpp  Transmitter.h  TransmittingException.h
